--- a/index.html
+++ b/index.html
@@ -1,12 +1,410 @@
-<!doctype html>
-	<head>
-		<title>RapidPegion | Coming Soon</title>
-	</head>
-	<body style="background:linear-gradient(white,blue);height:100vw;max-width:100%;">
-		<div style="color:blue;text-align:center;font-size:8em;font-family:monospace;">
-			Coming Soon!
-		</div>
-		<div style="text-align:right;">
-			-- This will be the home/landing page...
-		</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>RapidPegion | Welcome</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/fonts/stylesheet.css" rel="stylesheet">
+    <link href="assets/css/reset.css" rel="stylesheet
+    <link href="assets/css/slick.css" rel="stylesheet">
+    <link href="assets/css/owl.carousel.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/meanmenu.css">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/responsive.css" rel="stylesheet">
+
+    <!--  browser campatible css files-->
+    <!--[if lt IE 9]>
+        <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body class="js">
+    <!--start header area-->
+    <div id="preloader"></div>
+    <section class="header_area" id="home">
+        <!--   start logo & menu markup    -->
+        <div class="logo_menu" id="sticker">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2 col-lg-2 col-sm-2 col-xs-6">
+                        <div class="logo">
+								૨αρเ∂ρเɠεσɳ
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-6 col-md-offset-1 col-sm-7 col-lg-offset-1 col-lg-6 mobMenuCol">
+                        
+                    </div>
+                    <div class="col-md-3 col-sm-3 col-xs-4 col-lg-3 signup">
+                        <ul class="nav navbar-nav">
+                            <li><a href="#">login</a></li>
+                            <li><a href="#">sign up</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--   end of logo menu markup     -->
+        <!--  start welcome text marup  -->
+        <div class="table">
+            <div class="cell">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 text-center">
+                            <div class="welcome_text">
+                                <h1>Get the fastest service </h1>
+                                <h1>for your product</h1>
+                                <div class="welcome_p">
+                                    <p>Probably the oldest and most faithful </p>
+                                    <p>courier service in the world.</p>
+                                </div>
+                                <div class="welcome_form">
+                                    <form action="#">
+                                        <input class="form-control" type="text" placeholder="Enter your product code">
+                                        <input class="submit" type="submit" value="Track your product">
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end of welcome text markup-->
+    </section>
+    <!--end of header area-->
+
+    <!--   start about top area-->
+    <section class="about_top">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="about_single_item">
+                        <div class="item_icon">
+                            <img src="assets/img/fast.png" alt="item">
+                        </div>
+                        <div class="about_single_item_content">
+                            <h4>Fastest Delivery</h4>
+                            <p>Record for zero untimely deliveries.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="about_single_item">
+                        <div class="item_icon">
+                            <img src="assets/img/support.png" alt="item">
+                        </div>
+                        <div class="about_single_item_content">
+                            <h4>Ultimate Support</h4>
+                            <p>Crew that will befriend you in no time.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="about_single_item">
+                        <div class="item_icon">
+                            <img src="assets/img/money.png" alt="item">
+                        </div>
+                        <div class="about_single_item_content">
+                            <h4>Lowest Price</h4>
+                            <p>We focus on providing the maximum at the minimum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    end of about top area-->
+
+
+    <!--    start about us area-->
+    <section class="about_us_area" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-6">
+                    <div class="about_us_content">
+                        <h2>About us</h2>
+                        <p>We are a home pick-up & home delivery, courier service headquartered at Hogwarts, Established since 1814. We provide you with the best possible courier service to everyone in the world.</p>
+                    </div>
+                </div>
+                <div class="col-md-offset-1 col-sm-6 col-md-5">
+                    <div class="about_car">
+                        <img src="assets/img/pigeon.jpg" alt="car">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+	<section class="about-us-bottom-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-4 col-xs-12 col-lg-4">
+                    <div class="single-about-us-bottom">
+                        <h4>what we do</h4>
+                        <p>We provide home pickup and home delivery courier service at lowest cost,</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12 col-lg-4">
+                    <div class="single-about-us-bottom">
+                        <h4>our history</h4>
+                        <p>Our company got established in 1814 with a small headquarter at Hogwarts, </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12 col-lg-4">
+                    <div class="single-about-us-bottom">
+                        <h4>our mission</h4>
+                        <p>We aspire to make courier services available to anyone and everyone in this world.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--   end of about us area-->
+
+    <!--start count up area-->
+    <section class="couter_up_area" id="service">
+        <div class="table">
+            <div class="cell">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2 col-sm-3 text-center">
+                            <div class="single_count">
+                                <h1 class="counter">1780</h1>
+                                <h5>Satisfied clients</h5>
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-3 col-md-offset-1 text-center">
+                            <div class="single_count">
+                                <h1 class="counter">205</h1>
+                                <h5>National Branches</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    end of counter up area-->
+
+    <!--start calculate area-->
+    <section class="calculate_area" id="tracking">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-sm-6">
+                    <div class="calculate_title">
+                        <h2>Calculate your cost</h2>
+                        <p>Our free and precise tool to calculate how much the voyage of your package will cost,</p>
+                    </div>
+                    <div class="calculate_form">
+                        <form action="post">
+                            <div class="single_calculate">
+                                <input type="text">
+                                <label>height</label>
+                                <div class="calculate_option">
+                                    <select>
+                                        <option value="cm">cm</option>
+                                        <option value="mm">mm</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="single_calculate">
+                                <input type="text">
+                                <label>width</label>
+                                <div class="calculate_option">
+                                    <select>
+                                        <option value="cm">cm</option>
+                                        <option value="mm">mm</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="single_calculate">
+                                <input type="text">
+                                <label>length</label>
+                                <div class="calculate_option">
+                                    <select>
+                                        <option value="cm">cm</option>
+                                        <option value="mm">mm</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="single_calculate">
+                                <input type="text">
+                                <label>weight</label>
+                                <div class="calculate_option">
+                                    <select>
+                                        <option value="kg">kg</option>
+                                        <option value="gms">grams</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="single_calculate">
+								<input type="text">
+                                <label>Pickup location</label>
+                            </div>
+							<div class="single_calculate">
+								<input type="text">
+                                <label>Delivery location</label>
+                            </div>
+                            <div class="calculat-button">
+                                <input type="submit" class="calulate" value="Calculate your cost now">
+                            </div>
+                            <div class="totla-cost">
+                                <h5>Total Cost: <span>$ 30</span></h5>
+                                <h5>Duration:: <span>3 days</span></h5>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="calculat-image">
+            <img src="assets/img/calc.png" alt="#">
+        </div>
+    </section>
+    <!--    end of calculate area-->
+
+
+    <!--    start client say area-->
+    <section class="client-area" id="blog">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-xs-12 col-sm-8">
+                    <div class="slients-title">
+                        <h2>What our clients say</h2>
+                        <p>Hear from what are customers say about us,</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="single-clients">
+                        <div class="client-img">
+                            <img src="assets/img/sanjay.jpg" alt="client">
+                        </div>
+                        <div class="client-details">
+                            <p>“RapidPegion is truly a company to trust when it comes to timely deliveries at cheapest costs.”</p>
+                            <h4>Sanjay Dutt<span>Actor</span></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="single-clients">
+                        <div class="client-img">
+                            <img src="assets/img/elon.jpg" alt="client">
+                        </div>
+                        <div class="client-details">
+                            <p>“A positive feedback and five star ratings aren't enough to appreciate. Cheers :p”</p>
+                            <h4>Elon Musk<span>CEO, SpaceX</span></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    end of client area-->
+
+    <section class="contact-page-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-6 text-left">
+                    <div class="about_us_content_title">
+                        <h2>contact us</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-6">
+    
+	<div class="contact-form">
+                        <h2 class="contact_page_headings">Send us a message</h2>
+                        <form method="post" action="#">
+                            <input type="text" name="username" placeholder="Your name">
+                            <input type="email" name="email_address" placeholder="Email address">
+                            <input type="text" name="subject" placeholder="Subject">
+                            <textarea name="messages" placeholder="Message"></textarea>
+                            <input type="submit" name="submit" value="send">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+	
+    <section class="footer-area" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-3 col-xs-12 col-lg-4">
+                    <div class="single-footer">
+                        <h2>CREDITS</h2>
+                        <p>Pics from <a href="#">Pixabay</a></p>
+						<p>Icons from <a href="#">Flaticon</a></p>
+                        </div>
+                </div>
+                <div class="col-md-2 col-sm-3 col-xs-12 col-lg-2">
+                    <div class="single-footer">
+                        <h2>More links</h2>
+                        <ul class="list">
+                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="#">Privacy</a></li>
+                            <li><a href="#">Sitemap</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3 col-xs-12 col-lg-3">
+                    <div class="single-footer">
+                        <h2>We accept</h2>
+                        <a href="#"><img src="assets/img/debit-card.png" alt="#"></a>
+						<a href="#"><img src="assets/img/purse.png" alt="#"></a>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3 col-xs-12 col-lg-3">
+                    <div class="single-footer clearfix">
+                        <h2>News letters</h2>
+                        <input type="text" class="form-control">
+                        <input type="submit" class="submt-button" value="submit">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--end of footer area-->
+
+    <!--   start copyright text area-->
+    <div class="copyright-area">
+        <div class="container">
+            <div class="col-xs-12 col-sm-6 col-md-6 text-left">
+                <div class="footer-text">
+                    <p>Copyleft 2018, All Wrongs Reserved</p>
+                </div>
+            </div>
+            <div class="col-xs-12  col-sm-6 col-md-6 text-right">
+                <div class="footer-text">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-linkedin"></a>
+                    <a href="#" class="fa fa-google-plus"></a>
+                    <a href="#" class="fa fa-dribbble"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--    end of copyright text area-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="assets/js/jquery.sticky.js"></script>
+    <script src="assets/js/jquery.meanmenu.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/jquery.mb.YTPlayer.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
+    <script src="assets/js/jquery.nav.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="assets/js/jquery.counterup.min.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
+
 </html>
