--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     
 	<div class="contact-form">
                         <h2 class="contact_page_headings">Send us a message</h2>
-                        <form method="post" action="#">
+                        <form method="post" action="assets/php/mailer.php">
                             <input type="text" name="username" placeholder="Your name">
                             <input type="email" name="email_address" placeholder="Email address">
                             <input type="text" name="subject" placeholder="Subject">
