--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-4 col-lg-3 signup">
                         <ul class="nav navbar-nav">
-                            <li><a href="#">login</a></li>
-                            <li><a href="#">sign up</a></li>
+                            <li><a href="login.html">login</a></li>
+                            <li><a href="signup.html">sign up</a></li>
                         </ul>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
     
 	<div class="contact-form">
                         <h2 class="contact_page_headings">Send us a message</h2>
-                        <form method="post" action="assets/php/mailer.php">
+                        <form method="post" action="#">
                             <input type="text" name="username" placeholder="Your name">
                             <input type="email" name="email_address" placeholder="Email address">
                             <input type="text" name="subject" placeholder="Subject">
